[tool.poetry]
name = "random-chimp-event"
version = "1.1"
description = "jugando con el hado del mundo"
authors = ["flzubuduuz"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
